# mars-drone-development

./: .gitignore  START_HERE.md  THESIS_SYNC_AGENT.md  check_mavros_setup.sh  run_sitl_gazebo.sh  setup_harmonic_env.sh
docs/: ALL_WORK_SUMMARY.md  DRONE_FLIGHT_STACK_REAL.md  LOCKON_NOTES.md  MAVROS_ALLOCATOR_FIX.md  PROGRESS_LOG.md  ardupilot_setup.md  code_index.md  flight_guide.md
drone-venv/: pyvenv.cfg
install/: local_setup.sh  setup.sh
install/ardupilot_gazebo/share/ardupilot_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ardupilot_msgs/share/ardupilot_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: apriltag_tf_broadcaster.py  tag_overlay.py
src/backups_iris/: iris_runway.sdf
src/install/: local_setup.sh  setup.sh  setup.zsh
src/install/tag_hover_sim/share/tag_hover_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/tag_hover_sim/share/tag_hover_sim/launch/: sim_lockon_backbone.launch.py
src/log/: latest_build
src/tag_hover_sim/: PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  requirements.txt  setup.cfg  setup.py
src/tag_hover_sim/config/: apriltag_params.yaml
src/tag_hover_sim/launch/: sim_lockon_backbone.launch.py
src/tag_hover_sim/tag_hover_sim/: apriltag_pnp_broadcaster.py  apriltag_tf_broadcaster.py  hover_yaw_search.py
src/tag_hover_sim/worlds/: apriltag_test.sdf  testing_nodrone.sdf
(+228 files in other folders)
