<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tag_hover_sim</name>
  <version>0.1.0</version>
  <description>Simulation integration package for AprilTag hover/yaw-search stack in Gazebo Harmonic + ArduPilot SITL</description>
  
  <maintainer email="javierbecerril@example.com">Javier Becerril</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies matching real hardware stack -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
